# picky-mcp

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt  run_server.py  setup.py
config/: notion_schema.json
src/: __init__.py  config.py  maps_client.py  models.py  notion_client.py  notion_manager.py  restaurant_manager.py  server.py  sync_manager.py
tests/: test_basic.py
